Add AttributePathDeclaration for formatted attribute paths
 - Keeps path format and source value with origin and location metadata
 - Resolves the path lazily and caches the result
 - Adds JavaPathFormat no-op for programmatically built paths